Fixed the button not disply correctly on mobile. Updated the Blog cards so the date shows correctly. Also reduced the font size on blog cards.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -106,6 +106,8 @@ body{
 		list-style: none;
 	}
 
+	.navbar .navbar-toggler{ border-color: inherit; }
+
 	.navbar .social-list li a{
 		padding: 0 4px;
 	}
@@ -326,19 +328,11 @@ body{
 	.comments .comment {
 		padding: 1rem 1.25rem;
 	}
-<<<<<<< HEAD
 
 	.comments .comment.parent{
 		padding-bottom: 0;
 	}
 
-=======
-
-	.comments .comment.parent{
-		padding-bottom: 0;
-	}
-
->>>>>>> 643c3c1d0acca6ca9848b518ec28a728495cb605
 	.comments > ul > .comment .comment-body {
 		padding: 1rem;
 		border: 1px solid #efeeee;
@@ -436,6 +430,27 @@ body{
 .card{
 	height: 100%;
 }
+
+	.card .card-body{
+		display: -webkit-flex;
+	    display: -moz-flex;
+	    display: -ms-flexbox;
+	    display: -o-flex;
+	    display: flex;
+	    -webkit-flex-flow: column nowrap;
+    	-moz-flex-flow: column nowrap;
+    	-ms-flex-flow: column nowrap;
+    	-o-flex-flow: column nowrap;
+    	flex-flow: column nowrap;
+	}
+
+	.card .card-body .card-excerpt{ margin-bottom: 20px; }
+
+		.card .card-body .card-excerpt p{ margin-bottom: 5px; }
+
+	.card .card-body .btn{ margin-top: auto; }
+
+	.card .card-footer{ font-size: 12px; }
 
 
 /*------------------------------------*\
